# STM32CubeF1-CMAKE

./: CMakeLists.txt  License.md  README.md
Drivers/CMSIS/: README.md
Drivers/CMSIS/Device/ST/STM32F1xx/: License.md
Drivers/STM32F1xx_HAL_Driver/: README.md
cmake/: prerequisites.cmake
